<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#424040"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSeven"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDivision"
            android:text="@string/Division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:text="@string/Multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMinus"
            android:text="@string/Minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnPoint"
            android:text="@string/Point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            />



        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnCLR"
            android:text="@string/clr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnPlus"
            android:text="@string/Plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEquals"
            android:text="@string/Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEqual"
             />





    </LinearLayout>


  </LinearLayout>